Created buildSrc to organize build configuration

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -2,20 +2,16 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
 }
 
-group 'com.dbeginc.clean-arch'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
+group Configurations.groupId
+version Configurations.cleanArchBaseVersion
 
 dependencies {
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation(KotlinLibraries.stdlibJdk8)
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = Configurations.jvmDefaultVersion
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = Configurations.jvmDefaultVersion
 }
