V2 version of the clean architecture library for android, backend, javascript, native. Updated to kotlin 1.3.20

--- a/rxjava2/build.gradle
+++ b/rxjava2/build.gradle
@@ -9,7 +9,7 @@ group Configurations.groupId
 version Configurations.cleanArchRxJavaVersion
 
 dependencies {
-    implementation("com.bitsydarel.clean-arch:core-jvm:0.1")
+    implementation("com.bitsydarel.clean-arch:core-jvm:0.2")
     implementation(ThirdPartiesLibraries.rxJava2)
     implementation(KotlinLibraries.stdlibJdk8)
 }
@@ -89,6 +89,8 @@ publishing {
         }
     }
 }
+
+bintrayUpload.dependsOn publishToMavenLocal
 
 signing {
     sign(publishing.publications)
