fixed dependencies for type for rxjava2 library, so the public dependencies can be marked as compile scope.

--- a/rxjava2/build.gradle
+++ b/rxjava2/build.gradle
@@ -9,8 +9,8 @@ group Configurations.groupId
 version Configurations.cleanArchRxJavaVersion
 
 dependencies {
-    implementation("com.bitsydarel.clean-arch:core-jvm:0.2")
-    implementation(ThirdPartiesLibraries.rxJava2)
+    api("com.bitsydarel.clean-arch:core-jvm:0.2")
+    api(ThirdPartiesLibraries.rxJava2)
     implementation(KotlinLibraries.stdlibJdk8)
 }
 
@@ -89,8 +89,6 @@ publishing {
         }
     }
 }
-
-bintrayUpload.dependsOn publishToMavenLocal
 
 signing {
     sign(publishing.publications)
